--- a/EvalutionS3figma/style.css
+++ b/EvalutionS3figma/style.css
@@ -211,19 +211,23 @@ nav {
 
 #landing>#right>#color {
     border: 1px solid purple;
-    /* grid-template-columns: repeat(5, 1fr); */
-    /* display: grid; */
-    width: 350px;
+    grid-template-columns: repeat(5, 1fr);
+    display: grid;
+    width: 300px;
     height: 150px;
     /* top: 251.35px; */
     gap: 0px;
     border-radius: 8px;
     opacity: 0.9px;
+    position: relative;
+    left: 600px;
+    background: rgba(255, 255, 255, 1);
+
 
 
 }
 
-#landing>#right>#color>div>.circle {
+#landing>#right>#color>.circle {
     border: 1px solid red;
     width: 27.33px;
     height: 27.27px;
@@ -239,4 +243,24 @@ nav {
     border-radius: 50%;
     background-color: purple;
 
+}
+
+/* banner 2 */
+#banner2right{
+    background: rgba(255, 255, 255, 1);
+    width: 450px;
+    height: 460px;
+    top: 5px;
+    left: 890px;
+    gap: 0px;
+    border-radius: 20px;
+    /* border: 0.5px 0px; */
+    opacity: 0px;
+    /* border: 1px solid red;    */
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+   
+    /* margin: right px; ; */
+    padding-top: 10px;
+    padding-left:  30px; ;
+    position: relative;
 }
