--- a/EvalutionS3figma/style.css
+++ b/EvalutionS3figma/style.css
@@ -80,20 +80,24 @@ nav {
 } */
 
 #navbtn {
+    align-items: end;
+     /* border: 1px solid; */
+     
     width: Hug (92px)px;
     height: Hug (44px)px;
-    top: 13px;
-    left: 1048px;
+    top: 0px;
+    left: 0px;
     padding: var(--25) var(--5) var(--25) var(--5);
-    gap: var(--2);
     border-radius: var(--rounded-lg);
     border: 1px 0px 0px 0px;
     opacity: 0px;
-    gap: 10px;
+    gap: 20px;
+  
 
 }
 
 #navbtn>button:nth-child(1) {
+    
     height: 44px;
     width: 92px;
     /* background: rgba(255, 255, 255, 1); */
@@ -283,7 +287,8 @@ nav {
     background: rgba(255, 255, 255, 0.01);
 
 }
-#banner2left>div>img{
+
+#banner2left>div>img {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
@@ -305,4 +310,214 @@ nav {
     gap: 0px;
     opacity: 0px;
 
+}
+
+#banner3>#right>img {
+    /* border: 1px solid red; */
+    width: 620px;
+    height: 411px;
+    position: absolute;
+    top: 1370px;
+    left: 720px;
+    gap: 0px;
+    border-radius: 0px 20px 0px 0px;
+    opacity: 0px;
+    bottom: 100px;
+
+}
+
+#banner3>#left {
+    /* border: 1px solid red; */
+    position: absolute;
+    width: 620px;
+    height: 411px;
+    top: 1370px;
+    left: 100px;
+    gap: 0px;
+    border-radius: 20px 0px 0px 0px;
+    opacity: 0px;
+    background: rgba(119, 87, 244, 1);
+
+}
+
+#banner3>#left>h2 {
+    /* border: 1px solid red; */
+    color: rgba(255, 255, 255, 1);
+    text-align: center;
+    font-family: open sans;
+
+
+}
+
+#banner3>#left>p {
+    text-align: center;
+    position: absolute;
+    top: 110px;
+    left: 80px;
+    gap: 5px;
+    opacity: 0px;
+    font-size: x-large;
+    justify-content: space-evenly;
+    font-family: inter;
+}
+
+#banner3>#left>button {
+    position: absolute;
+    top: 340px;
+    left: 160px;
+    border-radius: 8px;
+    opacity: 0px;
+    width: 100px;
+    height: 40px;
+    color: rgba(119, 87, 244, 1);
+    border: none;
+
+}
+
+#banner3>#bottom {
+    /* border: 1px solid red; */
+    justify-content: space-around;
+    display: flex;
+    /* width: 1144px; */
+    position: absolute;
+    height: 70px;
+    top: 1786px;
+    left: 100px;
+    gap: 0px;
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    width: 1244px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    font-family: inter;
+}
+
+#banner4>#left {
+    position: absolute;
+    /* width: 504.52px;
+    height: 357px; */
+    top: 2121px;
+    left: 129px;
+    gap: 0px;
+    border-radius: 10px 0px 0px 0px;
+    opacity: 0px;
+    /* width: 400px;
+    height: 220px; */
+}
+
+#banner4>#right {
+    /* border: 1px solid; */
+    position: absolute;
+    width: 561px;
+    height: 196px;
+    top: 2121px;
+    left: 779px;
+    gap: 0px;
+    opacity: 0px;
+
+}
+
+#banner4>#right>h1 {
+    font-family: open sans;
+}
+
+#banner4>#right>h3 {
+    font-family: inter;
+}
+
+/* banner explore the  */
+/* #banner5{
+    border: 1px solid ridge;
+    background: rgba(250, 250, 250, 1);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+
+/* } */
+#banner5>div>h1 {
+    position: absolute;
+    width: 353px;
+    height: 46px;
+    top: 2623px;
+    left: 549px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: open sans;
+}
+
+#banner5>#protfolio {
+    position: absolute;
+    width: 1457px;
+    height: 402px;
+    top: 2719px;
+    left: 15px;
+    gap: 0px;
+    opacity: 0px;
+
+}
+
+/* banner6 */
+#banner6 {
+    background: rgba(235, 230, 253, 1);
+    position: absolute;
+    width: 1440px;
+    height: 392px;
+    top: 3296px;
+    left: -2px;
+    gap: 0px;
+    opacity: 0px;
+
+}
+
+#banner6>h1 {
+    position: absolute;
+    width: 600px;
+    height: 92px;
+    top: 56px;
+    left: 418px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: open sans;
+    text-align: center;
+}
+
+#banner6>p {
+    position: absolute;
+    width: 1126px;
+    height: 60px;
+    top: 200px;
+    left: 155px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: inter;
+    text-align: center;
+
+
+}
+
+#banner6>button {
+    position: absolute;
+    width: Hug (200px)px;
+    height: Hug (55px)px;
+    top: 300px;
+    left: 618px;
+    padding: var(--35) var(--6) var(--35) var(--6);
+    gap: var(--2);
+    border-radius: var(--rounded-lg);
+    border: 1px 0px 0px 0px;
+    opacity: 0px;
+    width: 200px;
+    height: 60px;
+    background-color: white;
+    border-color: purple;
+    color: black;
+    font-family: inter;
+    border-radius: 8px;
+
+}
+#foot>img{
+    /* border: 1px solid red; */
+    position: absolute;
+    top: 3690px;
+    /* right: 20px; */
+    left: 0px;
+    width: 1440px;
+    /* padding-left: 10px; */
 }
